--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.xojo_uistate
-*.xojo_code.obsolete_*
 *.xojo_code.obsolete*
 /LeftRightArrow.xojo_code.obsolete_20171031_111344
 *.debug
+.DS_Store
